--- a/pytorch_DLNN/NN/RNN/test.ipynb
+++ b/pytorch_DLNN/NN/RNN/test.ipynb
@@ -147,7 +147,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "torch_env",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -161,7 +161,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
